terraform/eip.tf
resource "aws_eip" "bastion_eip" {
  depends_on = [module.ec2_public, module.vpc ]
  instance = module.ec2_public.id
  tags = local.common_tags 
}
